plugins {
  id 'org.sonarqube' version '7.3.1.8318'
}

ext.buildSystemPath = file("${System.env.VIVIDUS_BUILD_SYSTEM_HOME?:buildSystemRootDir}/${buildSystemVersion}")

apply from: "${buildSystemPath}/gradle/project.gradle"
apply from: "${buildSystemPath}/gradle/jacoco.gradle"

subprojects {
    dependencies {
        modules {
            module('org.hamcrest:hamcrest-core') {
                replacedBy('org.hamcrest:hamcrest', 'Use latest hamcrest version')
            }
            module('commons-logging:commons-logging') {
                replacedBy('org.slf4j:jcl-over-slf4j', 'Redirect commons-logging logs to SLF4J')
            }
            module('log4j:log4j') {
                replacedBy('org.slf4j:log4j-over-slf4j', 'Redirect Log4J 1.x logs to SLF4J')
            }
            module('ch.qos.reload4j:reload4j') {
                replacedBy('org.slf4j:log4j-over-slf4j', 'Redirect Reload4j (a drop-in replacement for Log4J 1.x) logs to SLF4J')
            }
            module('org.jsoup:jsoup') {
                replacedBy('com.github.vividus-framework:jsoup', 'Use jsoup build from the custom fork')
            }
            module('com.jayway.jsonpath:json-path') {
                replacedBy('com.github.vividus-framework.JsonPath:json-path', 'Use JsonPath build from the custom fork')
            }
        }
    }
}

def publishedSubprojects = subprojects.findAll {
    it.name != 'vividus-tests' && it.name != 'vividus-docker-bundler'
}
def libraries = publishedSubprojects.findAll { it.name != 'vividus-bom' }
configure(libraries) {
    apply from: "${buildSystemPath}/vividus-library-subproject.gradle"
    java {
        sourceCompatibility = JavaVersion.VERSION_17
    }
}

configure(publishedSubprojects) {
    apply plugin: 'maven-publish'

    publishing {
        repositories {
            maven {
                name = 'GitHubPackages'
                url = 'https://maven.pkg.github.com/vividus-framework/vividus'
                credentials {
                    username = System.getenv('GITHUB_ACTOR')
                    password = System.getenv('GITHUB_TOKEN')
                }
            }
        }
    }
}

tasks.register('jacocoAggregatedReport', JacocoReport) {
    libraries.each {
        executionData it.tasks.withType(Test)
    }
    dependsOn libraries.collect { it.tasks.withType(Test) }
    sourceDirectories.from(libraries.sourceSets.main.java.sourceDirectories)
    classDirectories.from(libraries.sourceSets.main.output)
}

project.description = 'Vividus'

ext {
    versions = [
        jbehave:                '6.0.0-alpha.11',
        powermock:              'a0be5c4bbe',
        jsonPath:               '0e32295fde'
    ]
}
